api endpoint to query bodies
